added todo listing route; updated swagger to add jwt
