# swagger.json
@@ -42,7 +42,7 @@
     }
   ],
   "paths": {
-    "/authenticate":{
+    "/authenticate": {
       "post": {
         "tags": [
           "auth"
@@ -62,6 +62,26 @@
           },
           "401": {
             "description": "Invalid login credential"
+          }
+        }
+      }
+    },
+    "/todos": {
+      "get": {
+        "tags": [
+          "todo"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of todos"
+          },
+          "401": {
+            "description": "Auth token required"
           }
         }
       }
@@ -917,6 +937,14 @@
     }
   },
   "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "name": "authorization",
+        "type": "apiKey",
+        "in": "header",
+        "description": "Bearer <token>"
+      }
+    },
     "schemas": {
       "Order": {
         "type": "object",
@@ -1020,7 +1048,7 @@
           "name": "Tag"
         }
       },
-      "Auth":{
+      "Auth": {
         "required": [
           "email_or_mobile"
         ],
@@ -1098,25 +1126,6 @@
             "type": "string"
           }
         }
-      }
-    },
-    "securitySchemes": {
-      "petstore_auth": {
-        "type": "oauth2",
-        "flows": {
-          "implicit": {
-            "authorizationUrl": "http://petstore.swagger.io/oauth/dialog",
-            "scopes": {
-              "write:pets": "modify pets in your account",
-              "read:pets": "read your pets"
-            }
-          }
-        }
-      },
-      "api_key": {
-        "type": "apiKey",
-        "name": "api_key",
-        "in": "header"
       }
     }
   }
